tests/runnable/test_72_pretty_print_part_3.ul
void sampleTwo (int x)
{
    float[10] b;

    if (x<10)
    {
        x=x-1;
    }
    x=8;
}

void main ()
{
    string[10] a;
    int w;

    w=3;
    sampleTwo(w);
}
