tests/invalid/test_62_array_non_int2.ul
// test 36 : Access array with non-integer

void main(float a) 
{
    char['a'] b;
    print b[3];
}